k8s/networkpolicy/allow-egress-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-worker-egress-internet
  namespace: micrositio
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [api, worker] }
  policyTypes: [Egress]
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
