k8s/networkpolicy/allow-mongo-egress.yaml
# MongoDB necesita egress a otros mongo pods (replica set heartbeat/sync) + DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-egress
  namespace: micrositio
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
