k8s/networkpolicy/allow-prometheus-to-api.yaml
# Permitir Prometheus (ns observability) scrape /metrics del api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-api
  namespace: micrositio
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 3000
