k8s/networkpolicy/allow-prometheus-to-worker.yaml
# Permitir Prometheus (ns observability) scrape /metrics del worker (port 3001)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-worker
  namespace: micrositio
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 3001
