k8s/networkpolicy/allow-worker-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-mongo
  namespace: micrositio
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
